--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 body {
+  max-width: 1290px;
+  min-width: 1290px;
   background-color: light;
   display: flex;
   flex-wrap: wrap;
   width: 75%;
   margin: auto;
   font-family: "Roboto", sans-serif;
-  color: #4C4B4F;
+  color: #4c4b4f;
 }
 body h2 {
   text-transform: uppercase;
@@ -16,9 +18,13 @@ body h3 {
 }
 
 header {
-  position: absolute;
-  left: 815px;
-  top: 50px;
+  display: flex;
+  width: 100%;
+  justify-content: end;
+  padding-right: 20rem;
+  padding-top: 5rem;
+  margin-bottom: -10rem;
+  z-index: 1;
 }
 
 .info {
@@ -32,7 +38,7 @@ header {
   margin-bottom: -3rem;
 }
 .info .me__pic {
-  background: linear-gradient(-45deg, #dedede 50%, #0084C7 50%);
+  background: linear-gradient(-45deg, #dedede 50%, #0084c7 50%);
   border-radius: 25px 25px 0 0;
   height: 400px;
   margin-bottom: -2rem;
@@ -48,12 +54,11 @@ header {
   width: 100%;
   text-align: center;
   font-size: 3rem;
-  color: #0084C7;
+  color: #0084c7;
   margin-bottom: 0;
-  text-transform: uppercase;
 }
 .info h3 {
-  border-bottom: 3px solid #98979B;
+  border-bottom: 3px solid #98979b;
   padding: 1rem 0;
   margin: 1rem;
 }
@@ -67,7 +72,6 @@ header {
 }
 .info .languages h3 {
   width: 100%;
-  text-transform: uppercase;
 }
 .info .languages--text {
   width: 49%;
@@ -93,7 +97,7 @@ header {
 }
 .info .languages--progressBar ul li {
   position: relative;
-  background: linear-gradient(-90deg, #9A9A9D 70%, #0084C7 30%);
+  background: linear-gradient(-90deg, #9a9a9d 70%, #0084c7 30%);
   list-style: none;
   padding: 0.1rem;
   width: 90%;
@@ -111,7 +115,6 @@ header {
 }
 .info .reseaux h3 {
   width: 100%;
-  text-transform: uppercase;
 }
 .info .reseaux img {
   align-items: center;
@@ -137,10 +140,9 @@ header {
   padding: 1rem;
 }
 .skills h3 {
-  border-bottom: 3px solid #98979B;
+  border-bottom: 3px solid #98979b;
   padding: 1rem 0;
   width: 100%;
-  text-transform: uppercase;
 }
 .skills .experiences {
   margin: 1.5rem;
@@ -161,14 +163,13 @@ header {
 .skills .experiences__step--title {
   width: 66%;
   margin: 0;
-  text-transform: uppercase;
   font-weight: bolder;
 }
 .skills .experiences__step--loc {
   width: 100%;
   margin: 0;
   padding-left: 16rem;
-  color: #0084C7;
+  color: #0084c7;
   padding-bottom: 1rem;
 }
 .skills .experiences__step--years {
@@ -187,7 +188,7 @@ header {
   flex-wrap: wrap;
 }
 .skills .hobbies h3 {
-  border-bottom: 3px solid #98979B;
+  border-bottom: 3px solid #98979b;
   padding: 1rem 0;
   width: 100%;
 }
@@ -205,7 +206,7 @@ header {
   align-items: center;
 }
 .skills .hobbies__content--act img {
-  width: 80px;
+  width: 70px;
 }
 
 /*# sourceMappingURL=style.css.map */
