--- a/style.scss
+++ b/style.scss
@@ -74,7 +74,7 @@ header {
     h3 {
       width: 100%;
     }
-    &--text {
+    &__text {
       width: 49%;
       ul {
         width: 100%;
@@ -89,12 +89,22 @@ header {
         }
       }
     }
-    &--progressBar {
+    &__progressBar {
       width: 49%;
       ul {
         width: 100%;
         margin: auto;
         padding: 0;
+        .languages__progressBar--1 {
+          position: relative;
+          background: linear-gradient(-90deg, #9a9a9d 50%, #0084c7 50%);
+          list-style: none;
+          padding: 0.1rem;
+          width: 90%;
+          height: 3px;
+          margin-bottom: 1.25rem;
+          top: 5px;
+        }
         li {
           position: relative;
           background: linear-gradient(-90deg, #9a9a9d 70%, #0084c7 30%);
