ajout grid + btn cv

--- a/css/fonts.scss
+++ b/css/fonts.scss
@@ -1,11 +1,11 @@
-color-blue{
-    color: #0084C7;
+color-blue {
+  color: #0084c7;
 }
 
-color-grey{
-    color: #98979B;
+color-grey {
+  color: #98979b;
 }
 
-color-text{
-    color: #4C4B4F;
+color-text {
+  color: #4c4b4f;
 }
