--- a/css/style.scss
+++ b/css/style.scss
@@ -1,14 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 body {
-  max-width: 1290px;
+  // max-width: 1290px;
   min-width: 1290px;
   background-color: light;
   display: flex;
   flex-wrap: wrap;
   width: 75%;
   margin: auto;
-  font-family: "Roboto", sans-serif;
+  font-family: "PT Sans", sans-serif;
   color: #4c4b4f;
   h2 {
     text-transform: uppercase;
@@ -32,11 +31,11 @@ header {
   border-radius: 25px;
   width: 23%;
   text-align: center;
-  background-color: rgb(222, 222, 222);
+  background-color: #efeef2;
   .me {
     margin-bottom: -3rem;
     &__pic {
-      background: linear-gradient(-45deg, rgb(222, 222, 222) 50%, #0084c7 50%);
+      background: linear-gradient(-45deg, #efeef2 50%, #0084c7 50%);
       border-radius: 25px 25px 0 0;
       height: 400px;
       margin-bottom: -2rem;
@@ -47,7 +46,7 @@ header {
         border-radius: 50%;
       }
     }
-    h2 {
+    h1 {
       position: relative;
       top: -60px;
       width: 100%;
@@ -63,8 +62,19 @@ header {
     margin: 1rem;
   }
   .contact {
-    &__sub {
-      font-weight: bolder;
+    padding-bottom: 3rem;
+    &__btn {
+      position: relative;
+      top: 25px;
+      text-decoration: none;
+      padding: 1rem;
+      border-radius: 25px;
+      background-color: #0084c7;
+      color: whitesmoke;
+      &:hover {
+        background-color: #3190c0;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
+      }
     }
   }
   .languages {
@@ -142,17 +152,22 @@ header {
 
 .skills {
   width: 66%;
-  padding: 8rem 1rem 1rem 1rem;
+  padding: 3rem 1rem 1rem 1rem;
   margin: 1rem;
-  background-color: rgb(222, 222, 222);
+  background-color: #efeef2;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+  }
 
   .intro {
     margin: 1.5rem;
     padding-bottom: 2rem;
     p {
+      font-size: 1.1rem;
       padding: 1rem;
     }
   }
@@ -164,38 +179,44 @@ header {
   .experiences {
     margin: 1.5rem;
     &__step {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 1rem;
-      margin-top: 2rem;
+      display: grid;
+      grid-template-areas:
+        "one two two"
+        ". three three"
+        "for five five";
+      grid-template-columns: 280px 1fr 1fr;
+      grid-column-gap: 1rem;
+      padding-bottom: 1rem;
       &--name {
-        width: 29%;
+        grid-area: one;
         margin: 0;
+        padding: 0.5rem 0;
+        height: 20px;
         text-align: end;
         font-weight: bolder;
-        margin-right: 2rem;
       }
       &--title {
-        width: 66%;
         margin: 0;
+        padding: 0.5rem 0;
         font-weight: bolder;
+        text-transform: uppercase;
+        grid-area: two;
+        height: 20px;
       }
       &--loc {
-        width: 100%;
         margin: 0;
-        padding-left: 16rem;
         color: #0084c7;
+        grid-area: three;
         padding-bottom: 1rem;
       }
       &--years {
-        width: 29%;
         margin: 0;
         text-align: end;
-        margin-right: 2rem;
+        grid-area: for;
       }
       &--desc {
-        width: 66%;
         margin: 0;
+        grid-area: five;
       }
     }
   }
