--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header {
 }
 .skills .experiences__step {
   display: grid;
-  grid-template-areas: "one two two" ". three three" "for five five";
+  grid-template-areas: "one two two" "for three three" ". five five";
   grid-template-columns: 280px 1fr 1fr;
   grid-column-gap: 1rem;
   padding-bottom: 1rem;
@@ -242,7 +242,7 @@ header {
 
 @media screen and (max-width: 1200px) {
   body {
-    min-width: 400px;
+    min-width: 350px;
     width: 100%;
     align-items: center;
   }
@@ -253,7 +253,7 @@ header {
     border-radius: 0;
   }
   .info h1 {
-    padding-top: 5rem;
+    padding: 4rem 0 6rem 0;
   }
 
   .skills {
@@ -262,6 +262,15 @@ header {
     padding: 0;
     border-radius: 0;
   }
+  .skills h2 {
+    display: flex;
+    position: absolute;
+    top: 500px;
+    width: 100%;
+    min-width: 350px;
+    justify-content: center;
+    margin: auto;
+  }
   .skills h3 {
     text-align: center;
     padding: 1rem 0;
@@ -269,10 +278,16 @@ header {
   }
   .skills .experiences__step {
     display: grid;
-    grid-template-areas: "one two two" ". three three" "for five five";
+    grid-template-areas: "one two two" "for three three" ". five five";
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 1.2rem;
+  }
+  .skills .experiences__step--years {
+    padding-top: 1rem;
+  }
+  .skills .experiences__step--loc {
+    padding-top: 1rem;
   }
   .skills .hobbies {
     align-items: center;
@@ -281,9 +296,9 @@ header {
     width: 100%;
   }
 }
-@media screen and (max-width: 1200px) {
-  .experiences__step--loc {
-    padding-top: 1rem;
+@media screen and (max-width: 420px) {
+  h2 {
+    padding-top: 3rem;
   }
 }
 
