--- a/css/style.scss
+++ b/css/style.scss
@@ -183,8 +183,8 @@ header {
       display: grid;
       grid-template-areas:
         "one two two"
-        ". three three"
-        "for five five";
+        "for three three"
+        ". five five";
       grid-template-columns: 280px 1fr 1fr;
       grid-column-gap: 1rem;
       padding-bottom: 1rem;
@@ -251,7 +251,7 @@ header {
 
 @media screen and (max-width: 1200px) {
   body {
-    min-width: 400px;
+    min-width: 350px;
     width: 100%;
     align-items: center;
   }
@@ -260,7 +260,7 @@ header {
     width: 100%;
     border-radius: 0;
     h1 {
-      padding-top: 5rem;
+      padding: 4rem 0 6rem 0;
     }
   }
   .skills {
@@ -268,6 +268,15 @@ header {
     margin: 0;
     padding: 0;
     border-radius: 0;
+    h2 {
+      display: flex;
+      position: absolute;
+      top: 500px;
+      width: 100%;
+      min-width: 350px;
+      justify-content: center;
+      margin: auto;
+    }
     h3 {
       text-align: center;
       padding: 1rem 0;
@@ -278,11 +287,17 @@ header {
         display: grid;
         grid-template-areas:
           "one two two"
-          ". three three"
-          "for five five";
+          "for three three"
+          ". five five";
         grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 1rem;
-        padding-bottom: 1rem;
+        padding-bottom: 1.2rem;
+        &--years {
+          padding-top: 1rem;
+        }
+        &--loc {
+          padding-top: 1rem;
+        }
       }
     }
     .hobbies {
@@ -293,12 +308,8 @@ header {
     }
   }
 }
-@media screen and (max-width: 1200px) {
-  .experiences {
-    &__step {
-      &--loc {
-        padding-top: 1rem;
-      }
-    }
+@media screen and (max-width: 420px) {
+  h2 {
+    padding-top: 3rem;
   }
 }
