--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ header {
 }
 .skills .intro p {
   font-size: 1.1rem;
-  padding: 1rem;
+  padding: 3rem 1rem 0 1rem;
 }
 .skills h3 {
   border-bottom: 3px solid #98979b;
@@ -180,7 +180,7 @@ header {
   grid-template-areas: "one two two" "for three three" ". five five";
   grid-template-columns: 280px 1fr 1fr;
   grid-column-gap: 1rem;
-  padding-bottom: 1rem;
+  padding: 2.5rem 0 0 0;
 }
 .skills .experiences__step--name {
   grid-area: one;
