--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body h2 {
 }
 body h3 {
   text-transform: uppercase;
+  border-bottom: 3px solid #98979b;
+  padding: 1rem 0;
+  margin: 1rem;
 }
 
 header {
@@ -57,10 +60,12 @@ header {
   color: #0084c7;
   margin-bottom: 0;
 }
-.info h3 {
-  border-bottom: 3px solid #98979b;
-  padding: 1rem 0;
-  margin: 1rem;
+.info .bleu__ligne {
+  width: 15%;
+  height: 5px;
+  margin-left: 43%;
+  margin-top: -1.25rem;
+  background-color: #0084c7;
 }
 .info .contact {
   padding-bottom: 3rem;
@@ -134,15 +139,16 @@ header {
 .info .reseaux {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 .info .reseaux h3 {
   width: 100%;
 }
-.info .reseaux img {
+.info .reseaux__icons {
+  width: 100%;
+}
+.info .reseaux__icons img {
   align-items: center;
   height: 50px;
-  margin: auto;
   padding: 1rem;
 }
 
@@ -159,6 +165,13 @@ header {
   text-align: center;
   font-size: 2rem;
 }
+.skills .sd__bleu__ligne {
+  width: 5%;
+  height: 5px;
+  margin-top: -1.25rem;
+  margin-left: 1rem;
+  background-color: #3190c0;
+}
 .skills .intro {
   margin: 1.5rem;
   padding-bottom: 2rem;
@@ -166,11 +179,6 @@ header {
 .skills .intro p {
   font-size: 1.1rem;
   padding: 3rem 1rem 0 1rem;
-}
-.skills h3 {
-  border-bottom: 3px solid #98979b;
-  padding: 1rem 0;
-  width: 100%;
 }
 .skills .experiences {
   margin: 1.5rem;
@@ -255,12 +263,18 @@ header {
   .info h1 {
     padding: 4rem 0 6rem 0;
   }
+  .info .me__pic {
+    border-radius: 0 0 0 0;
+  }
 
   .skills {
     width: 100%;
     margin: 0;
     padding: 0;
     border-radius: 0;
+  }
+  .skills .intro {
+    margin: 1rem;
   }
   .skills h2 {
     display: flex;
@@ -275,6 +289,14 @@ header {
     text-align: center;
     padding: 1rem 0;
     width: 100%;
+    margin: 0;
+  }
+  .skills .sd__bleu__ligne {
+    width: 15%;
+    height: 5px;
+    margin-left: 43%;
+    margin-top: -0.25rem;
+    background-color: #0084c7;
   }
   .skills .experiences__step {
     display: grid;
@@ -282,6 +304,7 @@ header {
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 1rem;
     padding-bottom: 1.2rem;
+    margin: 1rem;
   }
   .skills .experiences__step--years {
     padding-top: 1rem;
@@ -289,11 +312,9 @@ header {
   .skills .experiences__step--loc {
     padding-top: 1rem;
   }
-  .skills .hobbies {
-    align-items: center;
-  }
   .skills .hobbies__content {
     width: 100%;
+    padding: 2rem 3rem;
   }
 }
 @media screen and (max-width: 420px) {
