--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,9 @@ body {
   }
   h3 {
     text-transform: uppercase;
+    border-bottom: 3px solid #98979b;
+    padding: 1rem 0;
+    margin: 1rem;
   }
 }
 header {
@@ -57,10 +60,13 @@ header {
       margin-bottom: 0;
     }
   }
-  h3 {
-    border-bottom: 3px solid #98979b;
-    padding: 1rem 0;
-    margin: 1rem;
+
+  .bleu__ligne {
+    width: 15%;
+    height: 5px;
+    margin-left: 43%;
+    margin-top: -1.25rem;
+    background-color: #0084c7;
   }
   .contact {
     padding-bottom: 3rem;
@@ -137,16 +143,16 @@ header {
   .reseaux {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-
     h3 {
       width: 100%;
     }
-    img {
-      align-items: center;
-      height: 50px;
-      margin: auto;
-      padding: 1rem;
+    &__icons {
+      width: 100%;
+      img {
+        align-items: center;
+        height: 50px;
+        padding: 1rem;
+      }
     }
   }
 }
@@ -163,19 +169,22 @@ header {
     text-align: center;
     font-size: 2rem;
   }
+  .sd__bleu__ligne {
+    width: 5%;
+    height: 5px;
+    margin-top: -1.25rem;
+    margin-left: 1rem;
+    background-color: #3190c0;
+  }
 
   .intro {
     margin: 1.5rem;
     padding-bottom: 2rem;
+
     p {
       font-size: 1.1rem;
       padding: 3rem 1rem 0 1rem;
     }
-  }
-  h3 {
-    border-bottom: 3px solid #98979b;
-    padding: 1rem 0;
-    width: 100%;
   }
   .experiences {
     margin: 1.5rem;
@@ -255,6 +264,7 @@ header {
     width: 100%;
     align-items: center;
   }
+
   .info {
     margin: 0;
     width: 100%;
@@ -262,12 +272,20 @@ header {
     h1 {
       padding: 4rem 0 6rem 0;
     }
+    .me {
+      &__pic {
+        border-radius: 0 0 0 0;
+      }
+    }
   }
   .skills {
     width: 100%;
     margin: 0;
     padding: 0;
     border-radius: 0;
+    .intro {
+      margin: 1rem;
+    }
     h2 {
       display: flex;
       position: absolute;
@@ -281,6 +299,14 @@ header {
       text-align: center;
       padding: 1rem 0;
       width: 100%;
+      margin: 0;
+    }
+    .sd__bleu__ligne {
+      width: 15%;
+      height: 5px;
+      margin-left: 43%;
+      margin-top: -0.25rem;
+      background-color: #0084c7;
     }
     .experiences {
       &__step {
@@ -292,6 +318,7 @@ header {
         grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 1rem;
         padding-bottom: 1.2rem;
+        margin: 1rem;
         &--years {
           padding-top: 1rem;
         }
@@ -301,9 +328,9 @@ header {
       }
     }
     .hobbies {
-      align-items: center;
       &__content {
         width: 100%;
+        padding: 2rem 3rem;
       }
     }
   }
